syntax = "proto3";
package jobworkerp.runner;

// settings for model initialization
message LLMRunnerSettings {
  enum IsqType {
    ISQ_TYPE_UNSPECIFIED = 0;
    Q4_0 = 1;
    Q4_1 = 2;
    Q5_0 = 3;
    Q5_1 = 4;
    Q8_0 = 5;
    Q8_1 = 6;
    Q2K = 7;
    Q3K = 8;
    Q4K = 9;
    Q5K = 10;
    Q6K = 11;
    Q8K = 12;
    HQQ8 = 13;
    HQQ4 = 14;
    F8E4M3 = 15;
  }

  message AutoDeviceMapParams {
    uint32 max_seq_len = 1;
    uint32 max_batch_size = 2;
  }

  message LocalTextModelSettings {
    string model_name_or_path = 1; // HF model ID or local path
    optional IsqType isq_type = 2; // quantitization type
    bool with_logging = 3;
    bool with_paged_attn = 4;
    optional string chat_template = 5;
  }

  // gguf model specific settings
  message LocalGgufModelSettings {
    string model_name_or_path = 1; // HF model ID or local directory containing GGUF files
    repeated string gguf_files = 2;
    optional string tok_model_id = 3; // tokenizer model ID
    bool with_logging = 4;
    optional string chat_template = 5;
  }

  // ollama model specific settings
  message OllamaSettings {
    // base_url (default: http://localhost:11434)
    optional string base_url = 1;
    // The name of the model
    string model = 2;
    // system prompt before the user prompt
    optional string system_prompt = 3;
    // pull the model from the server (set false if you want to use manually
    // loaded model)
    optional bool pull_model = 4;
  }

  // model type specific settings
  oneof model_settings {
    LocalTextModelSettings text_model = 1;
    LocalGgufModelSettings gguf_model = 2;
    OllamaSettings ollama_model = 3;
  }

  // invalid for ollama
  optional AutoDeviceMapParams auto_device_map = 4;
}